# file_transmitter

./: CMakeLists.txt  README.md
include/: common.h
input/: info.txt
src/: client.cpp  server.cpp
